--- a/jul/jul-xml/pom.xml
+++ b/jul/jul-xml/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.jul.xml</artifactId>
-	<version><!-- LV -->0.9.42-SNAPSHOT</version>
+	<version><!-- LV -->0.9.42</version>
 	<packaging>jar</packaging>
 	<name>Lilith - java.util.logging - XML (StaX)</name>
 	<description>This file is part of Lilith. It contains java.util.logging XML I/O.</description>
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.42-SNAPSHOT</version>
+		<version><!-- LV -->0.9.42</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
