--- a/logback/encoder-core/pom.xml
+++ b/logback/encoder-core/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.huxhorn.lilith</groupId>
 	<artifactId>de.huxhorn.lilith.logback.encoder.core</artifactId>
-	<version><!-- LV -->0.9.42</version>
+	<version><!-- LV -->0.9.43-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Logback Encoder - Core</name>
 	<description>This file is part of Lilith. It contains the encoder base class.</description>
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>de.huxhorn.lilith</groupId>
 		<artifactId>de.huxhorn.lilith.parent</artifactId>
-		<version><!-- LV -->0.9.42</version>
+		<version><!-- LV -->0.9.43-SNAPSHOT</version>
 		<relativePath>../../lilith-parent/pom.xml</relativePath>
 	</parent>
 	
