--- a/config.gradle
+++ b/config.gradle
@@ -286,10 +286,12 @@ subprojects {
 				// dep is a native Maven dependency object (With properties artifactId, groupId, ...)
 				for(dep in pom.dependencies) {
 					//println(dep.artifactId)
-					mapping=artifactMapping[dep.artifactId];
-					if(mapping) {
-						//println("Mapping ${dep.artifactId} to ${mapping}...")
-						dep.artifactId=mapping
+					if('de.huxhorn.lilith' == dep.groupId) {
+						mapping=artifactMapping[dep.artifactId];
+						if(mapping) {
+							//println("Mapping ${dep.artifactId} to ${mapping}...")
+							dep.artifactId=mapping
+						}
 					}
 				}
 			}
