Gradle 1.0-milestone-9 & git-state-plugin-0.0.2.
Fixing all deprecation warnings.

--- a/config.gradle
+++ b/config.gradle
@@ -2,7 +2,7 @@ import org.apache.tools.ant.filters.FixCrLfFilter
 import de.huxhorn.sulky.plist.*
 import org.gradle.plugins.signing.Sign
 
-artifactMapping = [
+project.ext.artifactMapping = [
 'jul-slf4j-handler':                           'de.huxhorn.lilith.jul-slf4j-handler',
 'jul-xml':                                     'de.huxhorn.lilith.jul.xml',
 'jul-xml-import':                              'de.huxhorn.lilith.jul.xml-import',
@@ -50,10 +50,10 @@ artifactMapping = [
 
 buildscript {
 	apply from: 'dependencyDefinitions.gradle'
-	localReleaseRepoFile = new File("${System.properties.'user.home'}/local-gradle-repository/release")
-	localSnapshotRepoFile = new File("${System.properties.'user.home'}/local-gradle-repository/snapshot")
-	localReleaseRepo = localReleaseRepoFile.toURL().toString()
-	localSnapshotRepo = localSnapshotRepoFile.toURL().toString()
+	project.ext.localReleaseRepoFile = new File("${System.properties.'user.home'}/local-gradle-repository/release")
+	project.ext.localSnapshotRepoFile = new File("${System.properties.'user.home'}/local-gradle-repository/snapshot")
+	project.ext.localReleaseRepo = localReleaseRepoFile.toURL().toString()
+	project.ext.localSnapshotRepo = localSnapshotRepoFile.toURL().toString()
 	repositories {
 		maven {
 			url localReleaseRepo
@@ -68,11 +68,9 @@ buildscript {
 		// needed for syncSnapshot and syncStaging
 		classpath 'org.apache.maven.wagon:wagon-webdav-jackrabbit:1.0-beta-6',
 		"de.huxhorn.sulky:de.huxhorn.sulky.plist:${versions.sulky}",
-		'de.huxhorn.gradle:de.huxhorn.gradle.git-state-plugin:0.0.1'
+		'de.huxhorn.gradle:de.huxhorn.gradle.git-state-plugin:0.0.2'
 	}
 }
-
-dependsOnChildren()
 
 apply plugin: 'base'
 apply plugin: 'signing'
@@ -106,9 +104,10 @@ gradle.taskGraph.whenReady { taskGraph ->
 			Console console = System.console()
 			pgpPassword = new String(console.readPassword("\nPGP Private Key Password: "))
 		}
-		allprojects*.setProperty('signing.password', pgpPassword)
-		allprojects*.setProperty('signing.keyId','740A1840')
-		allprojects*.setProperty('signing.secretKeyRingFile', new File("${System.properties['user.home']}/.gnupg/secring.gpg").absolutePath)
+
+		allprojects { ext.'signing.keyId' = '740A1840' }
+		allprojects { ext.'signing.secretKeyRingFile' = new File("${System.properties['user.home']}/.gnupg/secring.gpg").absolutePath }
+		allprojects { ext."signing.password" = pgpPassword }
 	}
 }
 
@@ -156,7 +155,7 @@ subprojects {
 	
 	artifacts { archives sourceJar, javadocJar }
 
-    defaultProject= {
+    project.ext.defaultProject= {
     	url 'http://lilith.huxhorn.de'
     	name project.name
     	description project.description
@@ -243,7 +242,7 @@ subprojects {
 		}
 	}
 
-    mapped=artifactMapping[project.name];
+    def mapped=artifactMapping[project.name];
     if(!mapped)
     {
     	throw new IllegalStateException("${project.name} does not have an entry in artifactMapping!");
@@ -287,7 +286,7 @@ subprojects {
 				for(dep in pom.dependencies) {
 					//println(dep.artifactId)
 					if('de.huxhorn.lilith' == dep.groupId) {
-						mapping=artifactMapping[dep.artifactId];
+						def mapping=artifactMapping[dep.artifactId];
 						if(mapping) {
 							//println("Mapping ${dep.artifactId} to ${mapping}...")
 							dep.artifactId=mapping
@@ -301,7 +300,7 @@ subprojects {
 		}
 	}
 	
-	installer = install.repositories.mavenInstaller
+	def installer = install.repositories.mavenInstaller
 	
 	installer.pom.project defaultProject
 	
@@ -387,7 +386,7 @@ project(':lilith') {
 	}
 	
 
-	distSpec = copySpec {
+	project.ext.distSpec = copySpec {
 		into("lilith-${version}") {
 			
 			//println "projectDir: ${projectDir}"
@@ -574,7 +573,7 @@ project(':lilith') {
 		plist=encoder.encode(plist, new FileOutputStream(propOutFile))
 	}
 	
-	appSpec = copySpec {
+	project.ext.appSpec = copySpec {
 		into("Lilith.app") {
 			
 			into('Contents') {
@@ -626,8 +625,7 @@ project(':lilith') {
 	}
 }
 
-def deleteClosure
-deleteClosure = {
+project.ext.deleteClosure = {
 	// delete content of it recursively
 	it.eachDir( deleteClosure );
 	it.eachFile {
