--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Mar 14 09:04:53 CET 2012
+#Thu Apr 12 23:59:10 CEST 2012
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.0-milestone-9-bin.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.0-rc-1-bin.zip
