--- a/config.gradle
+++ b/config.gradle
@@ -114,7 +114,7 @@ subprojects {
     	name project.name
     	description project.description
     	inceptionYear '2007'
-    	packaging 'jar' // does not work, fixed below
+    	//packaging 'jar' // does not work, fixed below
     	// See http://jira.codehaus.org/browse/GRADLE-1200
 
     	scm {
@@ -242,6 +242,7 @@ subprojects {
 	// The following fixes the broken packaging
 	// See http://jira.codehaus.org/browse/GRADLE-1200
 	// Thanks xlson
+	/*
 	installer.pom.withXml { XmlProvider xmlProvider ->
 		def xml = xmlProvider.asString()
 		def pomXml = new XmlParser().parseText(xml.toString())
@@ -268,6 +269,7 @@ subprojects {
 		xml.setLength(0)
 		xml.append(newXml.toString())
 	}
+	*/
 }
 
 project(':lilith') {
