--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jul 27 01:55:43 CEST 2012
+#Tue Jul 31 18:13:53 CEST 2012
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.1-rc-2-bin.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.1-bin.zip
