--- a/dependencyDefinitions.gradle
+++ b/dependencyDefinitions.gradle
@@ -4,6 +4,7 @@ project.ext.versions = [
 'aspectj':        '1.7.1',
 'jackson':        '1.9.11',
 'log4j':          '1.2.17',
+'log4j2':         '2.0-beta4',
 'logback':        '1.0.11',
 'slf4j':          '1.7.5',
 'spring':         '3.2.1.RELEASE',
@@ -35,6 +36,8 @@ project.ext.libraries = [
 'junit':                    'junit:junit:4.11',
 'log4j':                    "log4j:log4j:${versions.log4j}",
 'log4j-over-slf4j':         "org.slf4j:log4j-over-slf4j:${versions.slf4j}",
+'log4j2-api':               "org.apache.logging.log4j:log4j-api:${versions.log4j2}",
+'log4j2-core':              "org.apache.logging.log4j:log4j-core:${versions.log4j2}",
 'logback-access':           "ch.qos.logback:logback-access:${versions.logback}",
 'logback-classic':          "ch.qos.logback:logback-classic:${versions.logback}",
 'logback-core':             "ch.qos.logback:logback-core:${versions.logback}",
