--- a/lilith-parent/pom.xml
+++ b/lilith-parent/pom.xml
@@ -23,6 +23,7 @@
 		<groovyVersion>2.1.2</groovyVersion>
 		<jacksonVersion>1.9.11</jacksonVersion>
 		<log4jVersion>1.2.17</log4jVersion>
+		<log4j2Version>2.0-beta4</log4j2Version>
 		<logbackVersion>1.0.11</logbackVersion>
 		<slf4jVersion>1.7.5</slf4jVersion>
 		<springVersion>3.2.0.RELEASE</springVersion>
@@ -726,7 +727,19 @@
 				<artifactId>logback-access</artifactId>
 				<version>${logbackVersion}</version>
 			</dependency>
-		</dependencies>
+
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-api</artifactId>
+				<version>${log4j2Version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>${log4j2Version}</version>
+			</dependency>
+      </dependencies>
 	</dependencyManagement>
 	
 	<developers>
