--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Nov 19 21:42:53 CET 2012
+#Tue Nov 20 23:17:16 CET 2012
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.3-rc-2-bin.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.3-bin.zip
